Closed
Bug 1274228
Opened 7 years ago
Closed 7 years ago
Crash when import a settings from Becky!2
Categories
(MailNews Core :: Import, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 49.0
People
(Reporter: baffclan, Assigned: aceman)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1.42 KB,
patch
|
rkent
:
review+
|
Details | Diff | Splinter Review |
Steps to Reproduce: 1. Tools -> Import 2. appear Import dialog 3. select Settings and click [Next>] 4. select Becky! Internet Mail and click [Next>] 5. Appear explorer 6. Goto MailBox Folder 7. select mailbox.ini, and click [Open] 8. Crash User Agent: Mozilla/5.0 (Windows NT 6.1; rv:49.0) Gecko/20100101 Thunderbird/49.0a1 Build ID: 20160517030214 https://crash-stats.mozilla.com/report/index/cd5b70b7-e234-4d82-9b65-026252160519 https://crash-stats.mozilla.com/report/index/2f241c69-f58c-4b27-b3ee-f45e02160519
Updated•7 years ago
|
Severity: normal → critical
Status: UNCONFIRMED → NEW
Crash Signature: [@ nsBeckyUtils::ConvertToUTF8File ]
Ever confirmed: true
Keywords: crash
Comment 1•7 years ago
|
||
Crash code: 279 nsCOMPtr<nsIConverterInputStream> convertedInput; 280 convertedInput->Init(source, nsMsgI18NFileSystemCharset(), kBlock, 0x0000); 281 That's obviously incorrect.
This is probably my work. This function was modified by me to accommodate Neil's comments. Looks like it should be nsCOMPtr<nsIConverterInputStream> convertedInput = do_CreateInstance("@mozilla.org/intl/converter-input-stream;1"); Similarly with the output stream.
Blocks: 684455
Hi, please try the build from here if it still crashes: http://mzl.la/1s6Etbq
Thanks for make a try-builds. No Crashed, and Can imports Settings.
(In reply to baffclan from comment #4) > No Crashed, and Can imports Settings. Thanks, can you say from quick glance that the settings seem to be imported correctly?
I think that could be imported without any problems. (however, I do not testing a send/receive.)
Flags: needinfo?(baffclan)
Great, thanks for checking.
Comment 8•7 years ago
|
||
Comment on attachment 8756906 [details] [diff] [review] patch Thanks for working on this!
Attachment #8756906 -
Flags: review?(rkent) → review+
https://hg.mozilla.org/comm-central/rev/227af1b2b71d7cdbfd08e6753d13225fc502ae38
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 49.0
You need to log in
before you can comment on or make changes to this bug.
Description
•