Bug 1274228 - initialize nsIConverterInputStream in Becky import to avoid a crash. r=rkent